# ALCHEMY

./: .ghci  .gitignore  AllMain.hs  README  alchemy.cabal  ghci  package.yaml  stack.yaml
Crypto/: Alchemy.hs
Crypto/Alchemy/: Interpreter.hs  Language.hs  MonadAccumulator.hs
Crypto/Alchemy/Interpreter/: DedupRescale.hs  Depth.hs  Dup.hs  ErrorRateWriter.hs  Eval.hs  KeysHints.hs  PT2CT.hs  Params.hs  Print.hs  Size.hs
Crypto/Alchemy/Interpreter/PT2CT/: Noise.hs
Crypto/Alchemy/Language/: Arithmetic.hs  Lambda.hs  LinearCyc.hs  Monad.hs  Pair.hs  RescaleTree.hs  SHE.hs  String.hs
examples/: Arithmetic.hs  Common.hs  ERW.hs  HomomRLWR.hs  LinearDec2CRT.hs  NoiseExperiment.hs  RescaleTree.hs  Tunnel.hs
src/Crypto/Alchemy/: Language.hs
src/Crypto/Alchemy/Interpreter/: Dup.hs  ErrorRateWriter.hs  Eval.hs  KeysHints.hs  PT2CT.hs  Params.hs  Print.hs  Size.hs
src/Crypto/Alchemy/Interpreter/Counter/: TensorOps.hs
src/Crypto/Alchemy/Interpreter/PT2CT/: Noise.hs
src/Crypto/Alchemy/Language/: Arithmetic.hs  BGV.hs  Lambda.hs  Monad.hs  RescaleTree.hs  SHE.hs  Sort.hs  String.hs
src/Crypto/Alchemy/Language/RescaleTree/: TH.hs
